<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="com.example.admin.myexample.addnote.view.AddNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/addNoteTitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addNoteDescLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/addNoteDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Description"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/addNoteImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/addNoteImageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Picture"
                android:onClick="takePicture"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/notesProgressBar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addNoteFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done"
        android:layout_gravity="bottom|right"
        app:fabSize="normal"
        android:onClick="saveNote" />

</FrameLayout>
