<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.myexample.notes.view.NotesActivity">

    <ProgressBar
        android:id="@+id/notesProgressBar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notesRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:layout_gravity="bottom|right"
        app:fabSize="normal"
        android:onClick="addNote"/>


</FrameLayout>
